--- a/UI/src/app/app.component.css
+++ b/UI/src/app/app.component.css
@@ -72,3 +72,11 @@
   left: 50%;
   top: 50%;
 }
+
+.ui-switch-container {
+  text-align: center;
+  background-color: #F5F9FF;
+  padding: 5px;
+  font-size: 0.75rem;
+}
+
