--- a/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
+++ b/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
@@ -2,13 +2,13 @@
     position: absolute;
     z-index: 1070;
     top: 30px;
-    background: rgba(250, 250, 250, 0.95);
+    background: #202429;
     box-shadow: none;
     opacity: 1;
     border-radius: 5px;
     max-width: 550px;
     min-width: 180px;
-    color: #333;
+    color: #F5F9FF;
     margin-left: -24px;
     right: 0;
     min-height: 140px;
@@ -20,7 +20,6 @@
 .tooltip-wrapper{
     text-align: left;
     height: fit-content;
-    overflow-y: scroll;
     overflow-x: hidden;
 }
 
@@ -40,7 +39,7 @@
 .divide {
     width: 100%;
     height: 1px;        
-    border-bottom: 1px dashed #000;
+    border-bottom: 1px dashed #FFF;
 }
 
 .paragraph{
@@ -75,7 +74,7 @@ ul.kpi-info-list {
     height: 0;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
-    border-bottom: 8px solid #fafafaf2;
+    border-bottom: 8px solid #202429;
     position: absolute;
     top: -8px;
 }
