--- a/UI/src/app/component/multiline-style-v2/multiline-style-v2.component.css
+++ b/UI/src/app/component/multiline-style-v2/multiline-style-v2.component.css
@@ -49,14 +49,14 @@
     stroke-dasharray: (3, 3);
   }
   
-  ::ng-deep div.tooltip {
+  :host ::ng-deep div.tooltip {
     position: absolute;
     text-align: center;
     max-width: 220px;
     padding: 5px;
     font-size: 10px;
-    background: rgba(255, 255, 255, 0.95);
-    color: var(--color-gray-34);
+    background: #202429;
+    color: #F5F9FF;
     border-radius: 5px;
     box-shadow: 0px 0px 6px #b9b9bb;
     z-index: 1;
