--- a/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
+++ b/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
@@ -13,9 +13,10 @@
     right: 0;
     min-height: 140px;
 }
-.tooltip h4{
+:host .tooltip h4{
     font-family: var(--font-medium);
     margin: 5px 0;
+    font-size: 10px;
 }
 .tooltip-wrapper{
     text-align: left;
