--- a/UI/src/styles.css
+++ b/UI/src/styles.css
@@ -403,7 +403,7 @@ h3{
   -moz-animation: spin 2s linear infinite;
   -o-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  border: 5px solid var(--color-cyan-blue);
+  border: 5px solid #6079C5;
   border-left: 5px solid transparent;
 }
 
