--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -19,7 +19,7 @@
   <div class="ui-switch-container"
     *ngIf="router.url.indexOf('authentication') === -1 && router.url.indexOf('config') === -1">
     <span class="p-mr-6"> New experience (ON) | Legacy view (OFF)</span>
-    <p-inputSwitch [(ngModel)]="newUI" (onChange)="uiSwitch($event)"></p-inputSwitch>
+    <p-inputSwitch [(ngModel)]="newUI" (onChange)="uiSwitch($event, true)"></p-inputSwitch>
   </div>
 </ng-container>
 <router-outlet></router-outlet>
