--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -6,8 +6,11 @@
             [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }">
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
-                    <div><span>{{option.nodeName}}</span><span class="parent_span"> ({{ option.path.split('_')[0]
-                            }})</span>
+                    <div>
+                        <span>{{option.nodeName}}</span>
+                        <span class="parent_span">
+                            ({{ option.path.split('_')[0]}})
+                        </span>
                     </div>
                 </div>
             </ng-template>
@@ -24,7 +27,16 @@
         <p-dropdown inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
             placeholder="Select" optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
-            [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }"></p-dropdown>
+            [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }">
+            <ng-template let-option pTemplate="item">
+                <div class="filter-item">
+                    <span>{{ option.nodeName }}</span>
+                    <span class="parent_span">
+                        ({{ service.getSelectedTab().toLowerCase() === 'developer' ?  option.path.split('_')[0] : option.sprintState ? option.sprintState : option.releaseState }})
+                    </span>
+                </div>
+            </ng-template>
+        </p-dropdown>
         <label class="floating-label" for="singleselectFilter">Select {{ selectedLevel.emittedLevel }}</label>
     </span>
 </div>
