DTS-30437 FIELD MAPPOING HISTORY initial commit

--- a/UI/src/app/config/project-config/field-mapping/field-mapping.component.html
+++ b/UI/src/app/config/project-config/field-mapping/field-mapping.component.html
@@ -42,6 +42,6 @@
         [fieldMappingConfig]="fieldMappingConfig"
         [formData]="selectedFieldMapping"
         [selectedConfig]="selectedConfig"
-        [selectedToolConfig]="selectedToolConfig"></app-field-mapping-form>
+        [selectedToolConfig]="selectedToolConfig" [kpiId]="kpiId" [metaDataTemplateCode]="metaDataTemplateCode"></app-field-mapping-form>
 </div>
 
