--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.css
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.css
@@ -168,3 +168,37 @@ label.btn-import-label {
 :host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
   font-size: 14px;
 }
+
+.commentSummaryDdn{
+  width: max-content;
+  min-width: 300px;
+  position: absolute;
+  top: 35px;
+  right: 0;
+  /* background: #686868; */
+  box-shadow: 0px 1px 10px #00000045;
+  z-index: 2000;
+  border-radius: 5px;
+  left: 30px;
+  background-color: #686868;
+  color: #fff;
+}
+
+.comment-inner-section{
+  max-height: 400px;
+  overflow-y: scroll;
+  padding: 15px;
+  background-color: #686868;
+  color: #fff;
+  border-radius: 10px;
+}
+.dateAndName{
+  font-size: small;
+  color: #fff;
+}
+
+.h-40{
+  height :29px;
+}
+
+
