--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.css
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.css
@@ -47,3 +47,28 @@
 .kpi-card-container {
     scroll-snap-type: both mandatory;
 }
+
+.tabs-container {
+    display: flex;
+    padding: 0 0.5rem;
+    margin: 0 0 0.5rem 0;
+}
+
+.tab {
+    background-color: #fff;
+    border: 1px solid #D5DBE1;
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 12px;
+    padding: 0 8px 0 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    height: 33px;
+    line-height: 33px;
+}
+
+.tab.is-selected {
+    background: var(--color-blue);
+    color: #fff;
+    border-color: #D5DBE1;
+}
