--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -1,4 +1,4 @@
-<div  #filterDiv  style="width: 100vw; overflow-y: visible;">
+<div  #filterDiv style="width: 100vw; overflow-y: visible;">
     <span class="p-float-label" *ngIf="primaryFilterConfig['type'] !== 'singleSelect'">
         <p-multiSelect #multiSelect inputId="multiselectFilter" [options]="filters" [(ngModel)]="selectedFilters"
             optionLabel="nodeName" [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}"
@@ -28,6 +28,11 @@
             placeholder="Select" optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
             [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv">
+            <ng-template pTemplate="selectedItem">
+                <div class="country-item country-item-value">
+                    <div>{{selectedFilters[0].nodeName}}</div>
+                </div>
+            </ng-template>
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <span>{{ option.nodeName }}</span>
@@ -37,6 +42,6 @@
                 </div>
             </ng-template>
         </p-dropdown>
-        <label class="floating-label" for="singleselectFilter">Select {{ selectedLevel.emittedLevel }}</label>
+        <label class="floating-label" for="singleselectFilter">Select {{ selectedLevel?.emittedLevel }}</label>
     </span>
 </div>
