--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -246,6 +246,7 @@
     height: 30px;
     border: 2px solid #EAEDF0;
     border-radius: 8px !important;
+    transition: none;
 }
 
 :host ::ng-deep .p-selectbutton.p-buttonset.p-component {
