Deploying for Testing: MyKnowHOW, Speed, Quality, Value

--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.css
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.css
@@ -1,6 +1,11 @@
 .filter-container {
     background-color: #F5F9FF;
     font-size: 0.75rem;
+    display: flex;
+}
+
+:host ::ng-deep .p-float-label {
+    max-width: 300px;
 }
 
 :host ::ng-deep .p-float-label .p-inputwrapper-filled ~ label {
