--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -3,7 +3,7 @@
         <p-multiSelect #multiSelect inputId="multiselectFilter" [options]="filters" [(ngModel)]="selectedFilters"
             optionLabel="nodeName" [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}"
             [selectionLimit]="6" [selectedItemsLabel]="'{0} selected'" defaultLabel="Select"
-            [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }" [appendTo]="filterDiv">
+            [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }" [appendTo]="body">
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <div>
@@ -27,7 +27,7 @@
         <p-dropdown inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
             placeholder="Select" optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
-            [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv">
+            [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="body">
             <ng-template pTemplate="selectedItem">
                 <div class="country-item country-item-value">
                     <div>{{selectedFilters[0].nodeName}}</div>
