--- a/UI/src/app/dashboard/nav/nav.component.css
+++ b/UI/src/app/dashboard/nav/nav.component.css
@@ -86,7 +86,9 @@
 .nav-menu{
   flex-wrap: wrap;
   /* width: 60%; */
-  padding-left: 1.3rem
+  padding-left: 1.3rem;
+  overflow-y: auto;
+  max-height: 340px;
 }
 
 .navigation ul li.img-container {
