Creen Shift issue fix

--- a/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.css
+++ b/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.css
@@ -2,6 +2,10 @@
     font-family: 'Poppins_Regular', sans-serif;
 }
 
+:host .main-container {
+    max-width: 100vw;
+}
+
 :host .main-container,
 :host ::ng-deep .main-container label {
     background-color: #F5F9FF;
