--- a/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.html
@@ -1,4 +1,4 @@
-<div #filterDiv>
+<div>
     <span class="p-float-label">
         <p-dropdown [options]="filterLevels" [(ngModel)]="selectedLevel" inputId="singleselectParentFilter"
             placeholder="Select {{ parentFilterConfig['name'] }}"
