--- a/UI/src/app/dashboard/backlog/backlog.component.html
+++ b/UI/src/app/dashboard/backlog/backlog.component.html
@@ -8,7 +8,7 @@
           <p-tabView class="iteration-tabs" [(activeIndex)]="activeIndex" (onChange)="handleTabChange($event)">
             <p-tabPanel *ngFor="let board of navigationTabs" [header]="board.label" [disabled]="board.count == 0">
               <ng-container *ngIf="(updatedConfigGlobalData | json) != '{}' && updatedConfigGlobalData != undefined">
-                <div class="p-grid p-pr-2 p-pl-2 justify-content-start p-pt-2">
+                <div class="p-grid p-pr-2 p-pl-2 justify-content-start p-pt-2 p-m-0">
                   <!-- This container will be using for  tabs in which we have full and half width both kpi - start -->
                   <ng-container *ngIf="board.width === 'half'">
                     <!-- full width kpi render start -->
