--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.css
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.css
@@ -2,6 +2,7 @@
     background-color: #F5F9FF;
     font-size: 0.75rem;
     display: flex;
+    max-width: 100vw;
 }
 
 :host ::ng-deep .p-float-label {
