--- a/UI/src/app/shared-module/footer/footer.component.css
+++ b/UI/src/app/shared-module/footer/footer.component.css
@@ -21,6 +21,7 @@
     border-top: 2px solid #a3a3a3;
     background-color: var(--color-white);
     width: 100%;
+    max-width: 100vw;
     bottom: 0;
     line-height: 50px;
     margin-left: 0;
