--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -49,7 +49,8 @@
                                         [showCommentIcon]="showCommentIcon"
                                         [commentCount]="kpiCommentsCountObj[kpi?.kpiId]"
                                         (getCommentCountByKpi)="getKpiCommentsCount($event)"
-                                        (reloadKPITab)="reloadKPI($event)">
+                                        (reloadKPITab)="reloadKPI($event)"
+                                        [kpiSize]="kpi.kpiDetail.kpiSize">
                                         <ng-container *ngIf="!noTabAccess else noDataAccess">
                                             <div [ngSwitch]="kpi?.kpiDetail?.chartType">
                                                 <ng-container
@@ -140,6 +141,18 @@
                                                                     [data]="kpiChartData[kpi?.kpiId]"
                                                                     [activeTab]="activeIndex">
                                                                 </app-horizontal-percent-bar-chartv2>
+                                                            </ng-container>
+                                                            <ng-container
+                                                                *ngIf="!checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
+                                                                <ng-container
+                                                                    *ngTemplateOutlet="zeroData; context:  { $implicit: kpiSelectedFilterObj[kpi?.kpiId] }"></ng-container>
+                                                            </ng-container>
+                                                        </ng-container>
+                                                        <ng-container *ngSwitchCase="'pieChart'">
+                                                            <ng-container
+                                                                *ngIf="checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
+                                                                <app-piechart
+                                                                    [data]="kpiChartData[kpi?.kpiId]"></app-piechart>
                                                             </ng-container>
                                                             <ng-container
                                                                 *ngIf="!checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
