--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -23,7 +23,7 @@
         <i class="pi pi-ellipsis-v float-right" style="font-size: 20px"></i>
     </div>
     <!-- kpiFilter -->
-    <div [ngSwitch]="kpiData?.kpiDetail?.kpiFilter?.toLowerCase()" class="kpi-filter p-p-5" #kpiFilterContainer>
+    <div [ngSwitch]="kpiData?.kpiDetail?.kpiFilter?.toLowerCase()" class="kpi-filter p-pr-5 p-pl-5" #kpiFilterContainer>
         <div *ngSwitchCase="'dropdown'" class="p-d-flex p-justify-between">
             <ng-container *ngFor="let filter of dropdownArr;let k = index">
                 <p-dropdown *ngIf="dropdownArr?.length && filter?.options?.length" [options]="filter?.options"
@@ -64,7 +64,7 @@
         </ng-container>
     </div>
 
-    <div class="kpi-card-body p-pr-5 p-pl-5" [ngStyle]="{'height': !(showChartView === 'table') ? '220px' : '150px',
+    <div class="kpi-card-body p-pr-5 p-pl-5" [ngStyle]="{'height': kpiSize === 12 ? '250px' : '220px',
     'min-height': !(showChartView === 'table')  ? '220px' : '100px'}" [ngClass]="{'smallChart':board == 'dora'}">
         <!--place for chart to be rendered-->
         <ng-content *ngIf="trendValueList && trendValueList.length > 0 && !loader; else noData"></ng-content>
