import issue fixed

--- a/UI/src/app/config/project-config/field-mapping/field-mapping.component.html
+++ b/UI/src/app/config/project-config/field-mapping/field-mapping.component.html
@@ -28,7 +28,7 @@
             <input type="button" class="btn-export p-mr-3" value="Export" (click)="export()" />
             <label for="file-upload" class="btn-import-label">Import</label>
             <input style="width:0" id="file-upload" type="file" class="btn-import" name="fileUpload" accept=".json"
-                (change)="onUpload($event)" [disabled]="disableSave" />
+                (change)="onUpload($event)" />
             <span class="p-pl-3">{{uploadedFileName}}</span>
         </div>
     </div>
