--- a/central-auth-service/central-login-ui-react/src/components/FloatingInput/index.css
+++ b/central-auth-service/central-login-ui-react/src/components/FloatingInput/index.css
@@ -6,7 +6,7 @@
 .float-label input {
     width: 100%;
     height: 40px;
-    padding: 10px 16px 0 10px;
+    padding: 10px 16px 10px;
     outline: 0;
     border: 1px solid #ddd;
     border-radius: 4px;
